# jenkinsapi

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.rst  pyproject.toml  setup.cfg  test-requirements.txt
.github/: dependabot.yml
.github/workflows/: python-package.yml
doc/source/: conf.py  contributing.rst  index.rst
examples/how_to/: add_command.py  create_a_job.py  create_credentials.py  create_nested_views.py  create_slave.py  create_views.py  delete_all_the_nodes_except_master.py  get_config.py  get_plugin_information.py  get_version_info_from_last_good_build.py  query_a_build.py  search_artifact_by_regexp.py  search_artifacts.py  start_parameterized_build.py  use_crumbs.py
examples/low_level/: copy_a_job.py  create_a_view_low_level.py  login_with_auth.py  post_watcher.py
jenkinsapi/: __init__.py  api.py  artifact.py  build.py  config.py  credential.py  credentials.py  custom_exceptions.py  executor.py  executors.py  fingerprint.py  jenkins.py  jenkinsbase.py  job.py  jobs.py  label.py  mutable_jenkins_thing.py  node.py  nodes.py  plugin.py  plugins.py  queue.py  result.py  result_set.py  view.py  views.py
jenkinsapi/command_line/: jenkins_invoke.py  jenkinsapi_version.py
jenkinsapi/utils/: crumb_requester.py  jenkins_launcher.py  jsonp_to_json.py  krb_requester.py  requester.py
jenkinsapi_tests/systests/: conftest.py  test_credentials.py  test_downstream_upstream.py  test_env_vars.py  test_executors.py  test_generate_new_api_token.py  test_invocation.py  test_jenkins.py  test_jenkins_artifacts.py  test_jenkins_matrix.py  test_nodes.py  test_parameterized_builds.py  test_plugins.py  test_queue.py  test_quiet_down.py  test_restart.py  test_safe_exit.py  test_views.py
jenkinsapi_tests/unittests/: test_artifact.py  test_build.py  test_plugins.py
